--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+}
